--- a/biomes/rainforest.html
+++ b/biomes/rainforest.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css" integrity="sha512-Velp0ebMKjcd9RiCoaHhLXkR1sFoCCWXNp6w4zj1hfMifYB5441C+sKeBl/T/Ka6NjBiRfBBQRaQq65ekYz3UQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- STYLE CSS -->
     <link rel="stylesheet" href="style.css">
-    <title>Code olympic 5 Project</title>
+    <title>Biomes</title>
 </head>
 
 <body>
